Update the GUI.